hphp/test/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php.expectf
*** Testing mcrypt_ecb() : usage variation ***

--int 0--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--int 1--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--int 12345--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--int -12345--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--float 10.5--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--float -10.5--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--float 12.3456789000e10--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--float -12.3456789000e10--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--float .5--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--empty array--

Warning: mcrypt_ecb() expects parameter 1 to be string, array given in %s/hphp/test/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--int indexed array--

Warning: mcrypt_ecb() expects parameter 1 to be string, array given in %s/hphp/test/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--associative array--

Warning: mcrypt_ecb() expects parameter 1 to be string, array given in %s/hphp/test/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--nested arrays--

Warning: mcrypt_ecb() expects parameter 1 to be string, array given in %s/hphp/test/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--uppercase NULL--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--lowercase null--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--lowercase true--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--lowercase false--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--uppercase TRUE--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--uppercase FALSE--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--empty string DQ--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--empty string SQ--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--instance of classWithToString--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--instance of classWithoutToString--

Warning: mcrypt_ecb() expects parameter 1 to be string, object given in %s/hphp/test/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109

--undefined var--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--unset var--
Error: 2 - mcrypt_ecb(): Module initialization failed, %s(%d)
bool(false)

--resource--

Warning: mcrypt_ecb() expects parameter 1 to be string, resource given in %s/hphp/test/zend/good/ext/mcrypt/tests/mcrypt_ecb_variation1.php on line 109
===DONE===
